force-app/main/default/objects/Account_Intel__c/Account_Intel__c.object-meta.xml
<CustomObject>
    <description>Intelligence and insights about an Account including support summaries, upsell opportunities, news, and more.</description>
    <label>Account Intel</label>
    <nameField>
        <displayFormat>INTEL-{00000}</displayFormat>
        <label>Intel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Intel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>