force-app/main/default/objects/Account_Intel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account this intel relates to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Intel</relationshipLabel>
    <relationshipName>Account_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>