force-app/main/default/objects/Account_Intel__c/fields/Intel_Date__c.field-meta.xml
<CustomField>
    <fullName>Intel_Date__c</fullName>
    <description>Date when this intelligence is relevant or occurred</description>
    <label>Intel Date</label>
    <type>Date</type>
</CustomField>