force-app/main/default/objects/Account_Intel__c/fields/Intel_Type__c.field-meta.xml
<CustomField>
    <fullName>Intel_Type__c</fullName>
    <description>Category of intelligence</description>
    <label>Intel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Summary</fullName>
            </value>
            <value>
                <fullName>Upsell Opportunity</fullName>
            </value>
            <value>
                <fullName>Cross-Sell Opportunity</fullName>
            </value>
            <value>
                <fullName>Portal Activity</fullName>
            </value>
            <value>
                <fullName>Industry News</fullName>
            </value>
            <value>
                <fullName>Leadership Change</fullName>
            </value>
            <value>
                <fullName>Contract/Renewal</fullName>
            </value>
            <value>
                <fullName>Competitive Intel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>