force-app/main/default/objects/Account_Intel__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Date and time when this intel record was last updated</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>