force-app/main/default/objects/Account_Intel__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Detailed summary of the intelligence about this account</description>
    <label>Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>